skeplib/tests/fixtures/parser/valid/trailing_comma_call.sk
fn main() -> Int {
  hello(1,);
  return 0;
}
