skeplib/tests/fixtures/parser/invalid/match_missing_arrow.sk
fn main() -> Int {
  match (1) {
    1 { return 1; }
    _ => { return 0; }
  }
}
